# esp32-multi-sensor

./: README.md
.devcontainer/: Dockerfile  devcontainer.json  esp32-multi-sensor.code-workspace
app/: CMakeLists.txt  prj.conf
app/boards/: esp32_devkitc.conf  esp32_devkitc.overlay
app/src/: main.c
app/src/network/: wifi.c  wifi.h  wifi_shell.c
app/src/sensors/: dht11.c  dht11.h  ldr.c  ldr.h
docs/: index.md  wiring-diagram.drawio
scripts/: build.sh  flash.sh  monitor.sh  run.sh
